Fix show team feature wrap, make responsive

--- a/app/assets/stylesheets/team_show.scss
+++ b/app/assets/stylesheets/team_show.scss
@@ -54,6 +54,7 @@
   display: flex;
   width: 63%;
   justify-content: space-around;
+  flex-wrap: wrap;
   li {
     width: 262px;
     height: 262px;
@@ -65,6 +66,7 @@
     padding: 1rem;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.1);
+    margin: 0.6rem;
   }
 
   h2 {
